package com.studio6.app.common.proto;

option java_package = "com.studio6.app.common.proto";
option java_outer_classname = "CommonProtos";

message WorkItem {
  message Attempt {
    required string creation_date = 1;
    optional string message       = 2;
  }

  required string id                      = 1;
  required string creation_date           = 2;
  required int64 max_process_ms           = 3;
  required int64 max_attempts             = 4;
  required int64 wait_between_attempts_ms = 5;
  required bytes item                     = 6;
  optional Attempt in_progress_attempt    = 7;
  repeated Attempt attempt                = 8;
}
